--- a/index.html
+++ b/index.html
@@ -9,7 +9,68 @@
 </head>
 
 <body>
+   <div class="logo">
+      <span class="letter letter1">B</span>
+      <span class="letter letter2">M</span>
+      <span class="letter letter3">W</span>
+   </div>
+   <main>
+      <ol>
+         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, nostrum!</li>
+         <li>Blanditiis aspernatur, labore ipsam eveniet similique aliquam sed rem neque.</li>
+         <li>Cupiditate accusantium eos quis, placeat saepe cum ducimus quas eveniet!</li>
+         <li>Porro illum ex iste voluptas obcaecati dolorum, hic distinctio. Suscipit?</li>
+         <li>Consectetur dicta modi consequuntur animi facilis dolores ullam, unde quod.</li>
+      </ol>
 
+      <ul>
+         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, nostrum!</li>
+         <li>Blanditiis aspernatur, labore ipsam eveniet similique aliquam sed rem neque.</li>
+         <li>Cupiditate accusantium eos quis, placeat saepe cum ducimus quas eveniet!</li>
+         <li>Porro illum ex iste voluptas obcaecati dolorum, hic distinctio. Suscipit?</li>
+         <li>Consectetur dicta modi consequuntur animi facilis dolores ullam, unde quod.</li>
+      </ul>
+   </main>
+
+
+   <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, quos!</h1>
+   <p> ipsum, <em>dolor sit amet consectetur</em> adipisicing elit. <strong>Delectus nam sed tempore</strong> odit
+      perferendis cum
+      blanditiis
+      <b>ea illum qui doloremque quam,</b>
+      sint dolorum beatae omnis voluptatem amet aliquam temporibus enim! Saepe, sed amet.
+      Dolor eligendi quos quia obcaecati ducimus dolore nostrum reprehenderit, pariatur incidunt rem laborum in enim
+      dicta unde!
+   </p>
+   <img src="https://st17.stpulscen.ru/images/product/366/683/799_big.jpg" alt="pelmeni">
+   <h2>Perspiciatis nihil rem atque, quod magnam doloribus nesciunt dolore voluptatum?</h2>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus nam sed tempore odit perferendis cum blanditiis
+      ea illum qui doloremque quam, sint dolorum beatae omnis voluptatem amet aliquam temporibus enim! Saepe, sed amet.
+      Dolor eligendi quos quia obcaecati ducimus dolore nostrum reprehenderit, pariatur incidunt rem laborum in enim
+      dicta unde!</p>
+   <img src="img/borsch.jpg" alt="borsch">
+   <h3>Laudantium ullam deserunt voluptatum, reiciendis repellat rem quas obcaecati aut.</h3>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus nam sed tempore odit perferendis cum blanditiis
+      ea illum qui doloremque quam, sint dolorum beatae omnis voluptatem amet aliquam temporibus enim! Saepe, sed amet.
+      Dolor eligendi quos quia obcaecati ducimus dolore nostrum reprehenderit, pariatur incidunt rem laborum in enim
+      dicta unde!</p>
+   <h4>Minus possimus a fugit, repellendus velit rem voluptate unde consectetur.</h4>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus nam sed tempore odit perferendis cum blanditiis
+      ea illum qui doloremque quam, sint dolorum beatae omnis voluptatem amet aliquam temporibus enim! Saepe, sed amet.
+      Dolor eligendi quos quia obcaecati ducimus dolore nostrum reprehenderit, pariatur incidunt rem laborum in enim
+      dicta unde!</p>
+   <img src="https://fakeimg.pl/250x100/ff0000/">
+   <h5>Ullam doloribus cupiditate blanditiis iusto saepe ipsa, delectus nesciunt ipsum?</h5>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus nam sed tempore odit perferendis cum blanditiis
+      ea illum qui doloremque quam, sint dolorum beatae omnis voluptatem amet aliquam temporibus enim! Saepe, sed amet.
+      Dolor eligendi quos quia obcaecati ducimus dolore nostrum reprehenderit, pariatur incidunt rem laborum in enim
+      dicta unde!</p>
+   <img src="https://picsum.photos/seed/picsum/800/460" alt="randomfoto">
+   <h6>Consequatur eaque odit dolore inventore maxime quo, tenetur hic soluta!</h6>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus nam sed tempore odit perferendis cum blanditiis
+      ea illum qui doloremque quam, sint dolorum beatae omnis voluptatem amet aliquam temporibus enim! Saepe, sed amet.
+      Dolor eligendi quos quia obcaecati ducimus dolore nostrum reprehenderit, pariatur incidunt rem laborum in enim
+      dicta unde!</p>
 </body>
 
 </html>
